fix: modal height on mobile devices

--- a/src/app/components/contact-add-form/contact-add-form.scss
+++ b/src/app/components/contact-add-form/contact-add-form.scss
@@ -40,3 +40,9 @@
     border: 2px solid $white;
   }
 }
+
+@media (max-width:400px) {
+  .slogan {
+    display: none;
+  }
+}
