--- a/src/app/shared/ui/modal-wrapper/modal-wrapper.scss
+++ b/src/app/shared/ui/modal-wrapper/modal-wrapper.scss
@@ -56,8 +56,7 @@ div.modal-content {
 
 @media (max-width: 992px) {
   div.modal-container {
-    height: auto;
-    max-height: auto;
+    max-height: 100dvh;
   }
 
   .close-btn {
